--- a/ansible/roles/web/tasks/main.yml
+++ b/ansible/roles/web/tasks/main.yml
@@ -14,4 +14,5 @@
   template: src=index.php.j2 dest=/var/www/html/index.php mode=0644
 
 - name: 5. start Apache
+  become: true
   service: name=httpd state=started enabled=yes
